--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
-  text-align: center;
+      text-align: center;
+      justify-content: center;
+      width: 100vw;
+      height: 100vh;
+      display: grid;
+      place-items: center;
 }
 
 .App-logo {
